# fg

./: Cargo.toml
crates/base/: cargo.toml
crates/base/src/: lib.rs
crates/game/: cargo.toml
crates/game/src/: blueprints.rs  build_area.rs  components.rs  lib.rs  state.rs
crates/game/src/mods/: manager.rs  mod.rs
crates/game/src/player/: mod.rs
crates/interface/: cargo.toml
crates/interface/src/: camera.rs  lib.rs
crates/utils/src/: game_time.rs
src/: game.rs  loading.rs  main.rs  menu.rs  splash.rs
src/game/: camera.rs  input.rs  level.rs  loading.rs  mod.rs
src/game/player/: crosshair.rs  mod.rs
