[package]
name = "fg"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
fg_game = { path = "crates/game", version = "0.1.0" }
fg_base = { path = "crates/base", version = "0.1.0" }
fg_interface = { path = "crates/interface", version = "0.1.0" }
utils = { path = "crates/utils", version = "0.1.0" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = "0.11"
